Correcting - Card Overflow and NFT Attrib

--- a/homepage/css/homepage/card.css
+++ b/homepage/css/homepage/card.css
@@ -56,6 +56,7 @@ a {
     scroll-snap-align: start;
     clear: both;
     position: relative;
+    z-index: 0;
 }
 
 .card:focus-within~.card, .card:hover~.card {
@@ -69,7 +70,6 @@ a {
 .card:not(:first-child) {
     margin-left: -130px;
 }
-
 
 .card-header {
     margin-bottom: auto;
